--- a/Portfolio.css
+++ b/Portfolio.css
@@ -57,8 +57,7 @@ nav li:hover {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 100%;
+    height: 100vh;
     font-weight: bold;
     font-size: 1.5rem;
 }
@@ -162,7 +161,7 @@ footer {
     padding: 1rem;
   }
 
-@media (max-width: 1500px) {
+@media (max-width: 1000px) {
     .projects-grid {
         grid-gap: 2rem;
         padding: 0 2rem 0 3rem;
