--- a/Portfolio.css
+++ b/Portfolio.css
@@ -15,13 +15,6 @@ body {
 
 ul {
     list-style: none;
-    color: black;
-}
-
-a {
-    text-decoration: none;
-    color: black;
-
 }
 
 nav {
@@ -32,6 +25,7 @@ nav {
     top: 0;
     left: 0;
     width: 100%;
+    z-index: 99;
 }
 
 nav ul {
@@ -41,15 +35,19 @@ nav ul {
 
 nav ul li a {
     display: block;
-    font-size: 1.7rem;
-    padding: 2rem;
+    font-size: 2rem;
+    padding: 1rem;
+    margin-left: 2rem;
     text-decoration: none;
     font-weight: bold;
+    color: inherit;
 }
 
-nav li:hover {
-    transform: scale(1.6);
-    transition: 0.2s ease-out;
+nav ul li a:hover {
+    transform: scale(1.5);
+    transition: 0.3s ease-in-out;
+    text-decoration: none;
+    color: #fff;
 }
 
 #welcome-section {
@@ -74,115 +72,167 @@ nav li:hover {
     padding-top: 2rem;
 }
 
+
+.projects-container {
+    background-color: rgb(236, 240, 241);
+    padding: 10rem 7rem 5rem 7rem;
+}
+
 .project-header {
-    max-width: 640px;
-    margin: 0 auto 10rem auto;
-    font-size: 3em;
-    font-weight: bold;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    flex-direction: column;
     text-align: center;
 }
 
-#projects {
-    background-color: rgb(236, 240, 241);
-    padding: 10rem 0rem 10rem 0rem;
+.project-header hr {
+    display: inline-block;
+    border-top: 3px solid;
+    width: 70%;
+    margin: 1rem auto 3rem auto;
 }
 
-.projects-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
-    grid-gap: 4rem;
-    width: 100%;
-    max-width: 1300px;
-    margin: 0 auto;
-    margin-bottom: 6rem;
+.projects-wrapper {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.project-card {
+    margin: 2rem 1rem 2rem 1rem;
+    position: relative;
+    overflow: hidden;
+    width: 500px;
+    height: 350px;
+    border-radius: 2%;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.5);
 }
 
 .project-image {
-    max-width: 100%;
-    height: auto;
-    object-fit: cover;
-    border-radius: 5%;
-    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-}
-
-.project-tile:hover {
-    transform: scale(1.1);
-    transition: 0.2s ease-out;
+    width: 100%;
+    height: 100%;
 }
 
 .project-title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    text-align: center;
+    background-color: rgb(0, 0, 0, 0.6);
+    color: #fff;
+    font-size: 2rem;
+    font-weight: bold;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: translateY(100%);
+}
+
+.project-title--blur {
+    border-radius: 2%;
+    backdrop-filter: blur(5px);
+}
+
+.project-card:hover .project-title {
+    transform: translateY(0%);
+    transition: 0.2s ease-in-out;
+}
+
+
+.contact-container {
     font-size: 1.5rem;
-    padding: 1rem 0.5rem;
-    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-    background-color: rgb(255, 221, 89);
-    border-radius: 5%;
+    min-height: 95vh;
+    padding: 15rem 10rem 5rem 10rem; 
+}
+
+.contact-header {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
     text-align: center;
 }
 
-#contact {
+.contact-header hr {
+    border-top: 3px solid;
+    width: 40%;
+    margin: 1rem auto 3rem auto;
+}
+
+.contact-wrapper {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
-    font-size: 1.5rem;
-    width: 100%;
-    height: 95vh;
+    justify-content: space-around;
+    flex-wrap: wrap;   
+    text-align: center;
+    margin-top: 5rem;
+    padding: 2rem;
 }
 
-#contact-links {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    max-width: 100%;
-  }
-
-#contact h2 {
-    font-size: 4rem;
-    max-width: 640px;
-    margin: 0 auto 10rem auto;
-    font-size: 3em;
+.contact-info a {
+    font-size: 3rem; 
+    display: block;
+    text-decoration: none;
     font-weight: bold;
+    color: inherit;
 }
 
-.contact-details {
-    font-size: 3.5rem; 
-    padding-left: 2rem;
-}
-
-#profile-link:hover{
-    color: rgb(236, 240, 241);
+.contact-info a:hover {
+    transform: scale(1.2);
+    transition: 0.3s ease-in-out;
+    text-decoration: none;
+    color: #fff;
   }
 
 footer {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
     background-color: rgb(255, 221, 89);
     font-weight: 300;
     font-size: 1.5rem; 
-    text-align: right;
     padding: 1rem;
   }
 
-@media (max-width: 1000px) {
-    .projects-grid {
-        grid-gap: 2rem;
-        padding: 0 2rem 0 3rem;
+
+  @media (max-width: 576px) {
+    .projects-container {
+        padding: 10rem 1rem 5rem 1rem;
     }
-    html {
-        font-size: 60%;
-      }
-    nav {
-        justify-content: center;
+    .project-card {
+        margin: 2rem 1rem 2rem 1rem;
+        width: 400px;
+        height: 250px;
     }
-    nav ul li a {
-        font-size: 2.5rem;
+  }
+  
+  @media (max-width: 768px) {
+    .contact-wrapper {
+        margin-top: 10px;
     }
-    footer {
+  }
+  
+  @media (max-width: 992px) {
+
+  }
+  
+  @media (max-width: 1300px) {
+    .projects-container {
+        padding: 10rem 3rem 5rem 3rem;
+    }
+    .contact-container {
+        padding: 10rem 3rem 5rem 3rem; 
+    }
+    .contact-wrapper {
         flex-direction: column;
-        text-align: center;
-      }
-    .contact-details {
-        display: flex;
-        justify-content: flex-end;
-        justify-content: center;
-        padding: 2rem;
+        padding: 0;
+        margin: 0;
     }
-}
+    .contact-info {
+        padding: 0.5rem;
+    }
+  }
