--- a/index.css
+++ b/index.css
@@ -40,11 +40,11 @@ nav ul li a {
     margin-left: 2rem;
     text-decoration: none;
     font-weight: bold;
-    color: inherit;
+    color: inherit;   
 }
 
 nav ul li a:hover {
-    transform: scale(1.5);
+    transform: scale(1.2);
     transition: 0.3s ease-in-out;
     text-decoration: none;
     color: #fff;
@@ -63,11 +63,11 @@ nav ul li a:hover {
 .welcome-header {
     font-size: 3em;
     font-weight: bold;
+
 }
 
 .welcome-header-text {
     font-size: 2em;
-    font-weight: bold;
     font-style: italic;
     padding-top: 2rem;
 }
@@ -124,7 +124,6 @@ nav ul li a:hover {
     background-color: rgb(0, 0, 0, 0.6);
     color: #fff;
     font-size: 2rem;
-    font-weight: bold;
     top: 0;
     left: 0;
     width: 100%;
@@ -174,10 +173,9 @@ nav ul li a:hover {
 }
 
 .contact-info a {
-    font-size: 3rem; 
+    font-size: 3.5rem; 
     display: block;
     text-decoration: none;
-    font-weight: bold;
     color: inherit;
 }
 
@@ -234,5 +232,8 @@ footer {
     }
     .contact-info {
         padding: 0.5rem;
+    }
+    .contact-wrapper {
+        padding-top: 3rem;
     }
   }
